--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -769,42 +769,53 @@ jobs:
       - name: 生成下载链接表格和说明
         id: generate_table
         run: |
-          # 根据版本类型设置不同的标题
+          # 根据版本类型设置不同的标题和内容
           if [[ "${{ needs.get-version.outputs.version_type }}" == "Development Version" ]]; then
-            echo "# 🚧 GestroKey 最新开发构建 (未发布版本)" > release_description.md
+            # 未发布版本使用简化格式
+            echo "# GestroKey 开发版 ${{ needs.get-version.outputs.version }}" > release_description.md
             echo "" >> release_description.md
-            echo "**版本号:** ${{ needs.get-version.outputs.version }}" >> release_description.md
-            echo "**警告:** 此版本为自动构建的最新开发版本，可能包含不稳定功能和已知问题" >> release_description.md
+            echo "此版本为自动构建的最新开发版本，请谨慎使用。" >> release_description.md
+            echo "" >> release_description.md
+            
+            # 仅添加简化版更新日志
+            echo "## 更新日志" >> release_description.md
+            echo "" >> release_description.md
+            echo -e "${{ steps.generate_changelog.outputs.CHANGELOG }}" | grep -v "## 更新日志" >> release_description.md
+            
+            # 添加构建信息
+            echo "" >> release_description.md
+            echo "---" >> release_description.md
+            echo "构建时间: $(date '+%Y-%m-%d %H:%M:%S')" >> release_description.md
           else
+            # 正式版和预览版保持原有格式
             echo "# GestroKey ${{ needs.get-version.outputs.version }} ${{ needs.get-version.outputs.version_type }}" > release_description.md
+            echo "" >> release_description.md
+            echo "## 下载链接" >> release_description.md
+            echo "" >> release_description.md
+            echo "| 操作系统 | 单文件版 | 便携版 |" >> release_description.md
+            echo "|---------|---------|-------|" >> release_description.md
+            echo "| Windows | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |" >> release_description.md
+            echo "| macOS   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |" >> release_description.md
+            echo "| Linux   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |" >> release_description.md
+            echo "" >> release_description.md
+            
+            # 添加系统要求
+            echo "## 系统要求" >> release_description.md
+            echo "" >> release_description.md
+            echo "- **Windows**: Windows 10/11 64位" >> release_description.md
+            echo "- **macOS**: macOS 11.0+ (Big Sur及更高版本)" >> release_description.md
+            echo "- **Linux**: 主流桌面发行版 (Ubuntu 20.04+, Fedora 36+, Debian 11+)" >> release_description.md
+            echo "" >> release_description.md
+            
+            # 添加更新日志
+            echo -e "${{ steps.generate_changelog.outputs.CHANGELOG }}" >> release_description.md
+            
+            # 添加构建信息
+            echo "" >> release_description.md
+            echo "---" >> release_description.md
+            echo "" >> release_description.md
+            echo "此版本由GitHub Actions自动构建于 $(date '+%Y-%m-%d %H:%M:%S %Z')" >> release_description.md
           fi
-          
-          echo "" >> release_description.md
-          echo "## 下载链接" >> release_description.md
-          echo "" >> release_description.md
-          echo "| 操作系统 | 单文件版 | 便携版 |" >> release_description.md
-          echo "|---------|---------|-------|" >> release_description.md
-          echo "| Windows | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |" >> release_description.md
-          echo "| macOS   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |" >> release_description.md
-          echo "| Linux   | [独立可执行文件](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包](${{ needs.get-version.outputs.repo_url }}/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |" >> release_description.md
-          echo "" >> release_description.md
-          
-          # 添加系统要求
-          echo "## 系统要求" >> release_description.md
-          echo "" >> release_description.md
-          echo "- **Windows**: Windows 10/11 64位" >> release_description.md
-          echo "- **macOS**: macOS 11.0+ (Big Sur及更高版本)" >> release_description.md
-          echo "- **Linux**: 主流桌面发行版 (Ubuntu 20.04+, Fedora 36+, Debian 11+)" >> release_description.md
-          echo "" >> release_description.md
-          
-          # 添加更新日志
-          echo -e "${{ steps.generate_changelog.outputs.CHANGELOG }}" >> release_description.md
-          
-          # 添加构建信息
-          echo "" >> release_description.md
-          echo "---" >> release_description.md
-          echo "" >> release_description.md
-          echo "此版本由GitHub Actions自动构建于 $(date '+%Y-%m-%d %H:%M:%S %Z')" >> release_description.md
           
           # 输出完整内容给后续步骤使用
           echo "DESCRIPTION<<EOF" >> $GITHUB_OUTPUT
