新增：新的触发逻辑

--- a/src/ui/settings/default_settings.json
+++ b/src/ui/settings/default_settings.json
@@ -6,5 +6,8 @@
     "app": {
         "show_exit_dialog": true,
         "default_close_action": "minimize"
+    },
+    "gesture": {
+        "similarity_threshold": 0.70
     }
 } 
