新增：增加画笔模块强制置顶功能

--- a/src/ui/settings/default_settings.json
+++ b/src/ui/settings/default_settings.json
@@ -1,7 +1,8 @@
 {
     "brush": {
         "pen_width": 7,
-        "pen_color": [0, 120, 255]
+        "pen_color": [0, 120, 255],
+        "force_topmost": true
     },
     "app": {
         "show_exit_dialog": true,
